--- a/app/globals.css
+++ b/app/globals.css
@@ -54,6 +54,7 @@ header {
 }
 
 #razorP {
+  font-weight: normal;
   width: fit-content;
   margin: auto;
   text-align: center;
@@ -77,4 +78,87 @@ header {
 
 #buttonSP {
   color: white;
+}
+
+#containerCards {
+  display: flex;
+  justify-content: center;
+  margin: 100px 0px 60px 0px;
+  height: calc(350px + 175px);
+  gap: 20px;
+}
+
+#cardprimary,
+#cardsecondary {
+  width: 250px;
+  height: 300px;
+  border-radius: 20px;
+  padding: 30px 20px 20px 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#cardsecondary {
+  background-color: var(--secondary);
+}
+
+#cardprimary {
+  background-color: var(--primary);
+}
+
+#validade {
+  color: var(--bg);
+  font-weight: bold;
+  display: flex;
+  justify-content: end;
+}
+
+#cardsecondary {
+  width: 250px;
+  height: 300px;
+  border-radius: 20px;
+  background-color: var(--secondary);
+}
+
+#porcentagem {
+  font-size: 40px;
+  color: white;
+  font-weight: bold;
+}
+
+.listLateral {
+  color: white;
+  font-weight: bold;
+  font-size: 12px;
+}
+
+#infobottom {
+  display: flex;
+  justify-content: space-between;
+  color: var(--bg);
+}
+
+#infobottom2 {
+  display: flex;
+  flex-direction: column;
+}
+
+#infobottom2 > span {
+  color: var(--bg);
+  opacity: 0.5;
+}
+
+#infobottom > span {
+  color: var(--bg);
+  opacity: 0.5;
+}
+
+#infobottom > div {
+  background-color: var(--bg);
+  color: white;
+  border-radius: 10px;
+  height: 25px;
+  line-height: 100%;
+  padding: 0px 8px 0px 8px;
 }
